--- a/app/views/spree/products/_variant_options.html.erb
+++ b/app/views/spree/products/_variant_options.html.erb
@@ -1,6 +1,6 @@
 <% if @product.has_variants? %>
   <div id="product-variants">
-    <h2><%= t('variants') %></h2>
+    <h3><%= t('cart_variants') %></h3>
     <% index = 0 %>
     <% @product.grouped_option_values.each do |type, values| %>
       <div id="<%= dom_id(type) %>" class="variant-options index-<%= index %>">
